// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Zone Change Detection Main.ts Migration should handle multiline bootstrapModule call 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(
  AppModule
)
  .catch(err => console.error(err));
"
`;

exports[`Zone Change Detection Main.ts Migration should keep other options when removing applicationProviders 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule, {
  defaultEncapsulation: ViewEncapsulation.None,
})
  .catch(err => console.error(err));
"
`;

exports[`Zone Change Detection Main.ts Migration should not modify already migrated main.ts 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule)
  .catch(err => console.error(err));
"
`;

exports[`Zone Change Detection Main.ts Migration should remove applicationProviders even with multiple providers 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule)
  .catch(err => console.error(err));
"
`;

exports[`Zone Change Detection Main.ts Migration should remove provideZoneChangeDetection and applicationProviders from main.ts 1`] = `
"import { platformBrowser } from '@angular/platform-browser';
import { AppModule } from './app/app.module';

platformBrowser().bootstrapModule(AppModule)
  .catch(err => console.error(err));
"
`;
